# Huffman-coding

./: .gitignore  BitMap.cpp  BitMap.h  CLI.cpp  CLI.h  CMakeLists.txt  FileHandler.cpp  FileHandler.h  HuffmanCoder.cpp  HuffmanCoder.h  MinHeap.cpp  MinHeap.h  Node.cpp  Node.h  Quicksorter.cpp  Quicksorter.h  README.md  main.cpp  utils.cpp  utils.h
.github/workflows/: buildTest.yml
src/: BitMap.cpp  BitMap.h  CLI.cpp  CLI.h  HuffmanCoder.cpp  HuffmanCoder.h  MinHeap.h  main.cpp
test/: CMakeLists.txt  EncodeDecodeTest.cpp  Test.cpp
